created sub menu

--- a/index2.html
+++ b/index2.html
@@ -6,22 +6,19 @@
 	<link rel="stylesheet" type="text/css" href="styles/banner.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body style="background:white">
 
 <div id="navbar">
-  <a href="#default" id="logo"><img src="images/profile.jpg" alt="org logo" width="40px" style="border-radius: 50%"></a>
+  <a href="#default" id="logo"><img src="images/profile.jpg" alt="avater" width="40px" style="border-radius: 50%"></a>
   <div id="navbar-right">
-  	<a class="active" href="#">Home</a>
-    <a href="Projects.html">Projects</a>
-    <a href="Events.html">Events</a>
-    <a href="Links.html">Link</a>
+  <label>Daniel Kipchirchir</label>
   </div>
 </div>
 <div id="content2">
 	<div id="largecards" style="background-image: url(images/background7.png); background-size: cover;">
 	
 	 <center>
-	 <img src="images/profile.jpg" alt="org logo" width="60%" style="border-radius: 30%">
+	 <img src="images/profile.jpg" alt="avater" width="60%" style="border-radius: 30%">
 	 </center>
 
 	 <center>
@@ -34,50 +31,20 @@
 	</div><br>
 
 	<div id="smallcards" style="background-image: url(images/background8.png); background-size: cover;">
-		<center><label style="font-size: 24px;text-shadow: 0 0 5px;">Bio</label></center><br>
-		<p>
-			<b>My location:</b><br>
+		<div class="submenu">
+			<label>My <span>Resume</span></label>
+			<div class="submenu-menu">
+				<a href="#">Portfolio</a>
+				<a href="#">Resume</a>
+				<img src="images/menuicon.png" width="24px">
+			</div>
 
-			<ul id="myplace">
-				<li><span class="caret">Africa</span>
-					<ul class="nested">
-						<li>Central Africa</li>
-						<li>Souther Africa</li>
-				<li><span class="caret">Eastern Africa</span>
-					<ul class="nested">
-						<li>Uganda</li>
-						<li>Tanzania</li>
-
-				<li><span class="caret">Kenya</span>
-					<ul class="nested">
-						<li>Rift-vale</li>
-						<li>Eldoret</li>
-					</ul>
-
-				</li>
-				</ul>
-				</li>
-				</ul>
-				</li>
-
-			</ul>
-
-
-			<br>
-			My studies records 
-			<ol>
-					<li>Moi Barracks primary</li>
-					<li>Paul Boit High School</li>
-					<li>Kibabii University</li>
-				</ol> 
-			I am a software developer and I begun it in the year 2017. My  Area of Specialization is : 
-				<ol>
-					<li>Android development</li>
-					<li>Web development</li>
-					<li>Desktop application (JAVA)</li>
-				</ol> 
-		</p>
-
+		</div>
+		<div class="resumecontent">
+			resume content
+		</div>
+		
+		
 	</div><br>
 	
 
@@ -97,7 +64,7 @@
 	<p>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
 	you meet experts !!!</p> <br>
 <center>
-	<label style="font-size: 24px">Reach us ...</label><br><br>
+	<label style="font-size: 24px">Reach me...</label><br><br>
 	
 <table>
 			<tr>
@@ -147,7 +114,7 @@
 	</div>
 
 	<!-- body end start of scripts -->
-<script type="text/javascript" src="scripts/home.js"></script>
+<script type="text/javascript" src="scripts/index2.js"></script>
 <script type="text/javascript">
 
 
