--- a/index2.html
+++ b/index2.html
@@ -33,15 +33,51 @@
 	<div id="smallcards" style="background-image: url(images/background8.png); background-size: cover;">
 		<div class="submenu">
 			<label>My <span>Resume</span></label>
+			<img src="images/menuicon.png" width="24px" class="btnmenu">
 			<div class="submenu-menu">
-				<a href="#">Portfolio</a>
-				<a href="#">Resume</a>
-				<img src="images/menuicon.png" width="24px">
+		
+				<a href="#" class="slidemenup">Portfolio</a>
+				<a href="#" class="slidemenur">Resume</a>	
 			</div>
-
+			
 		</div>
 		<div class="resumecontent">
+			<h2>
 			resume content
+			<br>
+			resume content
+			<br>
+			resume content
+			<br>
+			resume content
+			<br>
+			resume content
+			<br>
+			resume content
+			<br>
+			resume content
+			<br>
+			resume content
+			<br>
+			</h2>
+		</div>
+		<div class="Portfolio">
+			<h2>
+			portfolio content
+			<br>
+			portfolio content
+			<br>
+			portfolio content
+			<br>
+			portfolio content
+			<br>
+			portfolio content
+			<br>
+			portfolio content
+			<br>
+			portfolio content
+			<br>
+			</h2>
 		</div>
 		
 		
