modified file the submenu fixed and working well

--- a/index2.html
+++ b/index2.html
@@ -32,16 +32,16 @@
 
 	<div id="smallcards" style="background-image: url(images/background8.png); background-size: cover;">
 		<div class="submenu">
-			<label>My <span>Resume</span></label>
+			<label>My <span class="selectedtab">Resume</span></label>
 			<img src="images/menuicon.png" width="24px" class="btnmenu">
 			<div class="submenu-menu">
 		
-				<a href="#" class="slidemenup">Portfolio</a>
-				<a href="#" class="slidemenur">Resume</a>	
+				<a href="index2.html#smallcards" class="slidemenup">Portfolio</a>
+				<a href="index2.html#smallcards" class="slidemenur">Resume</a>	
 			</div>
 			
 		</div>
-		<div class="resumecontent">
+		<div class="resumecontent" id="resumecontent">
 			<h2>
 			resume content
 			<br>
@@ -61,7 +61,7 @@
 			<br>
 			</h2>
 		</div>
-		<div class="Portfolio">
+		<div class="Portfolio" id="Portfolio">
 			<h2>
 			portfolio content
 			<br>
