created content for portfolio

--- a/index2.html
+++ b/index2.html
@@ -22,17 +22,28 @@
 	 </center>
 
 	 <center>
-	 	<label>Name :</label><br><hr>
-	 	<label>Location :</label><br><hr>
-	 	<label>Email :</label><br><hr>
-	 	<label>Currently :</label><br><hr>
+	 	<label><span></span>  Daniel Kipchirchir</label><br><hr>
+	 	<label><span></span>  Eldoret (Kenya)</label><br><hr>
+	 	<label><span></span>  kirwadan03@gmail.com</label><br><hr>
+	 	<label><span></span>  Studing (Kibabii University)</label><br><hr> 
+	 </center><br>
+	  <center>
+	 	<label><b>My Skills</b></label><br><br>
+	 	 <span><img src="https://img.shields.io/badge/-HTML-000000?style=flat&logo=html5&logoColor=FCC624"></span><br>
+	 	 <span><img src="https://img.shields.io/badge/-javascript-000000?style=flat&logo=javascript&logoColor=FCC624"></span><br>
+	 	 <span><img src="https://img.shields.io/badge/-Css-000000?style=flat&logo=css3&logoColor=FCC624"></span><br>
+	 	 <span><img src="https://img.shields.io/badge/-Vue.js-000000?style=flat&logo=vue.js&logoColor=FCC624"></span><br>
+	 	 <span><img src="https://img.shields.io/badge/-Laravel-000000?style=flat&logo=laravel&logoColor=FCC624"></span><br>
+	 	  <span><img src="https://img.shields.io/badge/-Java-000000?style=flat&logo=java&logoColor=F05032"></span><br>
+	 	 <span><img src="https://img.shields.io/badge/-Git-000000?style=flat&logo=git&logoColor=F05032"></span><br>
+	 	  <span><img src="https://img.shields.io/badge/-GitHub-000000?style=flat&logo=github&logoColor=F05032"></span>
 	 </center>
 
 	</div><br>
 
 	<div id="smallcards" style="background-image: url(images/background8.png); background-size: cover;">
 		<div class="submenu">
-			<label>My <span class="selectedtab">Resume</span></label>
+			<label id="mytag">My <span class="selectedtab">Resume</span></label>
 			<img src="images/menuicon.png" width="24px" class="btnmenu">
 			<div class="submenu-menu">
 		
@@ -62,22 +73,43 @@
 			</h2>
 		</div>
 		<div class="Portfolio" id="Portfolio">
-			<h2>
-			portfolio content
-			<br>
-			portfolio content
-			<br>
-			portfolio content
-			<br>
-			portfolio content
-			<br>
-			portfolio content
-			<br>
-			portfolio content
-			<br>
-			portfolio content
-			<br>
-			</h2>
+			<div class="mydiscription">
+				<p>
+					Hi am a software developer and web developer. I do modern UI design 
+				</p>
+			</div>
+			<div class="mydiscriptioncontent">
+				<div class="mycontent1">
+					<a href="#"><img src="images/screenshots/ecmmerceshort.jpg" width="100%"></a>
+					<a href="#">visit</a>&nbsp;&nbsp;
+					<label>
+						ecommerce website
+					</label>
+				</div><br>
+				<div class="mycontent2">
+					<a href="#"><img src="images/screenshots/Covid-19trackerhome.jpg" width="100%"></a>
+					<a href="#">visit</a>&nbsp;&nbsp;
+					<label>
+						time covid-19 update
+					</label>
+				</div>
+			</div><br>
+			<div class="mydiscriptioncontent">
+				<div class="mycontent1">
+					<a href="#"><img src="images/screenshots/tracktraceshort.jpg" width="100%"></a>
+					<a href="#">visit</a>&nbsp;&nbsp;
+					<label>
+						 ecommerce website
+					</label>
+				</div><br>
+				<div class="mycontent2">
+					<a href="#"><img src="images/screenshots/trainticketshort.jpg" width="100%"></a>
+					<a href="#">visit</a>&nbsp;&nbsp;
+					<label>
+						real time covid-19 update
+					</label>
+				</div>
+			</div>
 		</div>
 		
 		
