add rating of skills

--- a/index2.html
+++ b/index2.html
@@ -53,24 +53,101 @@
 			
 		</div>
 		<div class="resumecontent" id="resumecontent">
-			<h2>
-			resume content
-			<br>
-			resume content
-			<br>
-			resume content
-			<br>
-			resume content
-			<br>
-			resume content
-			<br>
-			resume content
-			<br>
-			resume content
-			<br>
-			resume content
-			<br>
-			</h2>
+			<div class="myresumediscription">
+				<p>
+					Hello have a look at my career journey. To me i believe in doing, couse in doing so you are able to check your steps 
+				</p>
+			</div>
+			<div class="myresumecontent">
+			<center>
+				<label><strong>Education</strong></label>
+			</center>
+				<hr>
+				<section>
+				<label><strong>Kibabii University</strong> <span>(aug 2018 - currently)</span></label><br>
+				<label><strong>Bachelor of Information Technology</strong></label>
+				<p>
+				Currently pursuing my career path towards the world of tech  	
+				</p>	
+				</section>
+				<hr>
+				<section>
+				<label><strong>University of California, Davis</strong> <span>(sep 2020 - nov 2020)</span></label><br>
+				<label><strong>Introduction to Web Development</strong></label>
+				<p>
+				To certisfy my perssion on website development. 	
+				</p>	
+				</section>
+				<hr>
+			</div>
+			<div class="myresumerating">
+				<center><label><strong>My Skills Rating</strong></label></center>
+				<div class="myrate">
+					<table id="ratingtable">
+						<thead>
+						<th class="rateitemhead">My skill</th>
+						<th class="ratescorehead">Rating</th>
+						</thead>
+							<tr>
+							<td class="rateitem"> Java</td>
+							<td class="ratescore"> 
+								<div id="ratetrack">
+									<div id="javaratetrain"></div>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="rateitem"> HTML</td>
+							<td class="ratescore"> 
+								<div id="ratetrack">
+									<div id="htmlratetrain"></div>
+								</div>
+							</td>
+						</tr>
+							<tr>
+							<td class="rateitem"> CSS</td>
+							<td class="ratescore"> 
+								<div id="ratetrack">
+									<div id="cssratetrain"></div>
+								</div>
+							</td>
+						</tr>
+							<tr>
+							<td class="rateitem"> UI/UX Design</td>
+							<td class="ratescore"> 
+								<div id="ratetrack">
+									<div id="uxratetrain"></div>
+								</div>
+							</td>
+						</tr>
+							<tr>
+							<td class="rateitem"> JavaScript</td>
+							<td class="ratescore"> 
+								<div id="ratetrack">
+									<div id="javascriptratetrain"></div>
+								</div>
+							</td>
+						</tr>
+							<tr>
+							<td class="rateitem"> Git</td>
+							<td class="ratescore"> 
+								<div id="ratetrack">
+									<div id="gitratetrain"></div>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="rateitem"> Laravel</td>
+							<td class="ratescore"> 
+								<div id="ratetrack">
+									<div id="laravelratetrain"></div>
+								</div>
+							</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+
 		</div>
 		<div class="Portfolio" id="Portfolio">
 			<div class="mydiscription">
