Added new background

--- a/index2.html
+++ b/index2.html
@@ -6,16 +6,16 @@
 	<link rel="stylesheet" type="text/css" href="styles/banner.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body style="background:white">
+<body>
 
 <div id="navbar">
-  <a href="#default" id="logo"><img src="images/profile.jpg" alt="avater" width="40px" style="border-radius: 50%"></a>
+  <a href="#default" id="logo"><img src="images/profile.jpg" alt="avater" width="40px" style="border-radius: 40%"></a>
   <div id="navbar-right">
   <label>Daniel Kipchirchir</label>
   </div>
 </div>
 <div id="content2">
-	<div id="largecards" style="background-image: url(images/background7.png); background-size: cover;">
+	<div id="largecards" style="background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/background7.png); background-size: cover;">
 	
 	 <center>
 	 <img src="images/profile.jpg" alt="avater" width="60%" style="border-radius: 30%">
@@ -41,7 +41,7 @@
 
 	</div><br>
 
-	<div id="smallcards" style="background-image: url(images/background8.png); background-size: cover;">
+	<div id="smallcards" style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/background8.png); background-size: cover;">
 		<div class="submenu">
 			<label id="mytag">My <span class="selectedtab">Resume</span></label>
 			<img src="images/menuicon.png" width="24px" class="btnmenu">
@@ -67,7 +67,7 @@
 				<label><strong>Kibabii University</strong> <span>(aug 2018 - currently)</span></label><br>
 				<label><strong>Bachelor of Information Technology</strong></label>
 				<p>
-				Currently pursuing my career path towards the world of tech  	
+				Currently pursuing my career path towards the world of tech. Am pround to be part of the current world treand since we are moving towards degitalization   	
 				</p>	
 				</section>
 				<hr>
@@ -75,7 +75,7 @@
 				<label><strong>University of California, Davis</strong> <span>(sep 2020 - nov 2020)</span></label><br>
 				<label><strong>Introduction to Web Development</strong></label>
 				<p>
-				To certisfy my perssion on website development. 	
+				To certisfy my perssion on website development and build my foundation as a web developer  	
 				</p>	
 				</section>
 				<hr>
@@ -160,14 +160,14 @@
 					<a href="#"><img src="images/screenshots/ecmmerceshort.jpg" width="100%"></a>
 					<a href="#">visit</a>&nbsp;&nbsp;
 					<label>
-						ecommerce website
+						ecommerce website that facilitated online shopping specificaly for beauty
 					</label>
 				</div><br>
 				<div class="mycontent2">
 					<a href="#"><img src="images/screenshots/Covid-19trackerhome.jpg" width="100%"></a>
 					<a href="#">visit</a>&nbsp;&nbsp;
 					<label>
-						time covid-19 update
+						Covid-19 update the site specificaly for country Kenya it gave update on both infection cumulation and also government directives and preventive measures
 					</label>
 				</div>
 			</div><br>
@@ -176,14 +176,14 @@
 					<a href="#"><img src="images/screenshots/tracktraceshort.jpg" width="100%"></a>
 					<a href="#">visit</a>&nbsp;&nbsp;
 					<label>
-						 ecommerce website
+						 An online car  and cargo tracking website for specific company provider
 					</label>
 				</div><br>
 				<div class="mycontent2">
 					<a href="#"><img src="images/screenshots/trainticketshort.jpg" width="100%"></a>
 					<a href="#">visit</a>&nbsp;&nbsp;
 					<label>
-						real time covid-19 update
+						An online train ticket booking platform to aid in time management and sychronize terminai activities
 					</label>
 				</div>
 			</div>
