--- a/index2.html
+++ b/index2.html
@@ -14,6 +14,22 @@
   <label>Daniel Kipchirchir</label>
   </div>
 </div>
+<div id="content1" style="background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/techbackground3.jpg);">
+	<center>
+		<br>
+		<h2>Hello am <span class="myprofession"></span></h2>
+	</center>
+	<center>
+		<p>
+			I got intrest on IoT, Since the platform creates opportunities for people to connect these devices and control them with big data technology, which in return will promote efficiency in performance 
+		</p>
+	</center>
+	<a href="index2.html#largecards">	<div class="scrolldown">
+		<span></span>
+		<span></span>
+		<span></span>
+	</div></a>
+</div>
 <div id="content2">
 	<div id="largecards" style="background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/background7.png); background-size: cover;">
 	
