--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
   <label>Daniel Kipchirchir</label>
   </div>
 </div>
-<div id="content1" style="background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/techbackground3.jpg);">
+<div id="content1" style="background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/techbackground3.jpg);background-size: cover;">
 	<center>
 		<br>
 		<h2>Hello am <span class="myprofession"></span></h2>
@@ -24,7 +24,7 @@
 			I got intrest on IoT, Since the platform creates opportunities for people to connect these devices and control them with big data technology, which in return will promote efficiency in performance 
 		</p>
 	</center>
-	<a href="index2.html#largecards">	<div class="scrolldown">
+	<a href="index2.html#largecards"><div class="scrolldown">
 		<span></span>
 		<span></span>
 		<span></span>
