--- a/index2.html
+++ b/index2.html
@@ -5,19 +5,20 @@
 	<link rel="stylesheet" type="text/css" href="styles/index2.css">
 	<link rel="stylesheet" type="text/css" href="styles/banner.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
-<div id="navbar">
+<div id="navbar" style="background: #4f4f4f ">
   <a href="#default" id="logo"><img src="images/profile.jpg" alt="avater" width="40px" style="border-radius: 40%"></a>
   <div id="navbar-right">
-  <label>Daniel Kipchirchir</label>
+  <label style="color: white">Daniel Kipchirchir</label>
   </div>
 </div>
 <div id="content1" style="background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/techbackground3.jpg);background-size: cover;">
 	<center>
 		<br>
-		<h2>Hello am <span class="myprofession"></span></h2>
+		<h3>Hi am <span class="myprofession"></span></h3>
 	</center>
 	<center>
 		<p>
@@ -54,7 +55,13 @@
 	 	 <span><img src="https://img.shields.io/badge/-Git-000000?style=flat&logo=git&logoColor=F05032"></span><br>
 	 	  <span><img src="https://img.shields.io/badge/-GitHub-000000?style=flat&logo=github&logoColor=F05032"></span>
 	 </center>
-
+	 <br>
+	 <hr>
+	 <center>
+	 <a href="#"><i class="fa fa-envelope icon"></i></a>
+	 <a href="#"><i class="fa fa-github icon"></i></a>
+	 <a href="#"><i class="fa fa-linkedin-square icon"></i></a>
+	 </center>
 	</div><br>
 
 	<div id="smallcards" style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/background8.png); background-size: cover;">
@@ -214,11 +221,11 @@
 </div>
 
 </div>
-<div id="moveup">
-	<center><div id="up"><a> <img src="images/moveup.png" id="up" onclick="topFunction()"> </a></div></center>
+<div id="moveup" style="background: #4f4f4f ">
+	<center><div id="up"  style="background: #4f4f4f "><a> <img src="images/moveup.png" id="up" onclick="topFunction()"  style="background: #4f4f4f "> </a></div></center>
 	
 </div> 
-<div id="footer">
+<div id="footer" style="background: #4f4f4f ">
 		
 		<center>
 	<label style="font-size: 24px">Best Quote</label>
