--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body style="background: #3b3b3b ">
 
 <div id="navbar" style="background: #4f4f4f ">
   <a href="#default" id="logo"><img src="images/profile.jpg" alt="avater" width="40px" style="border-radius: 40%"></a>
