icons changed  and added links

--- a/index2.html
+++ b/index2.html
@@ -32,17 +32,17 @@
 	</div></a>
 </div>
 <div id="content2">
-	<div id="largecards" style="background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/background7.png); background-size: cover;">
+	<div id="largecards">
 	
 	 <center>
 	 <img src="images/profile.jpg" alt="avater" width="60%" style="border-radius: 30%">
 	 </center>
 
 	 <center>
-	 	<label><span></span>  Daniel Kipchirchir</label><br><hr>
-	 	<label><span></span>  Eldoret (Kenya)</label><br><hr>
-	 	<label><span></span>  kirwadan03@gmail.com</label><br><hr>
-	 	<label><span></span>  Studing (Kibabii University)</label><br><hr> 
+	 	<label><span><i class="fa fa-user iconz"></i></span>  Daniel Kipchirchir</label><br><hr>
+	 	<label><span><i class="fa fa-map-marker iconz"></i></span>  Eldoret (Kenya)</label><br><hr>
+	 	<label><span><i class="fa fa-book iconz"></i></span>  Studing (Kibabii University)</label><br><hr>
+	 	<label><span><i class="fa fa-language iconz"></i></span>  Language (English)</label><br><hr> 
 	 </center><br>
 	  <center>
 	 	<label><b>My Skills</b></label><br><br>
@@ -58,16 +58,16 @@
 	 <br>
 	 <hr>
 	 <center>
-	 <a href="#"><i class="fa fa-envelope icon"></i></a>
-	 <a href="#"><i class="fa fa-github icon"></i></a>
-	 <a href="#"><i class="fa fa-linkedin-square icon"></i></a>
+	 <a href="mailto:kirwadan03@gmail.com" target="_blank"><i class="fa fa-envelope icon"></i></a>
+	 <a href="https://github.com/danielkirwa" target="_blank"><i class="fa fa-github icon"></i></a>
+	 <a href="#" target="_blank"><i class="fa fa-linkedin-square icon"></i></a>
 	 </center>
 	</div><br>
 
-	<div id="smallcards" style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/background8.png); background-size: cover;">
+	<div id="smallcards">
 		<div class="submenu">
 			<label id="mytag">My <span class="selectedtab">Resume</span></label>
-			<img src="images/menuicon.png" width="24px" class="btnmenu">
+			<span class="btnmenu"><i class="fa fa-bars icons"></i></span>
 			<div class="submenu-menu">
 		
 				<a href="index2.html#smallcards" class="slidemenup">Portfolio</a>
@@ -123,7 +123,9 @@
 							<td class="rateitem"> HTML</td>
 							<td class="ratescore"> 
 								<div id="ratetrack">
-									<div id="htmlratetrain"></div>
+									<div id="htmlratetrain">
+										<center><label>85 %</label></center>
+									</div>
 								</div>
 							</td>
 						</tr>
@@ -131,7 +133,9 @@
 							<td class="rateitem"> CSS</td>
 							<td class="ratescore"> 
 								<div id="ratetrack">
-									<div id="cssratetrain"></div>
+									<div id="cssratetrain">
+										<center><label>83 %</label></center>
+									</div>
 								</div>
 							</td>
 						</tr>
@@ -139,7 +143,9 @@
 							<td class="rateitem"> UI/UX Design</td>
 							<td class="ratescore"> 
 								<div id="ratetrack">
-									<div id="uxratetrain"></div>
+									<div id="uxratetrain">
+										<center><label>72 %</label></center>
+									</div>
 								</div>
 							</td>
 						</tr>
@@ -147,7 +153,9 @@
 							<td class="rateitem"> JavaScript</td>
 							<td class="ratescore"> 
 								<div id="ratetrack">
-									<div id="javascriptratetrain"></div>
+									<div id="javascriptratetrain">
+										<center><label>60 %</label></center>
+									</div>
 								</div>
 							</td>
 						</tr>
@@ -155,7 +163,9 @@
 							<td class="rateitem"> Git</td>
 							<td class="ratescore"> 
 								<div id="ratetrack">
-									<div id="gitratetrain"></div>
+									<div id="gitratetrain">
+										<center><label>59 %</label></center>
+									</div>
 								</div>
 							</td>
 						</tr>
@@ -163,7 +173,9 @@
 							<td class="rateitem"> Laravel</td>
 							<td class="ratescore"> 
 								<div id="ratetrack">
-									<div id="laravelratetrain"></div>
+									<div id="laravelratetrain">
+										<center><label>40 %</label></center>
+									</div>
 								</div>
 							</td>
 						</tr>
@@ -222,7 +234,7 @@
 
 </div>
 <div id="moveup" style="background: #4f4f4f ">
-	<center><div id="up"  style="background: #4f4f4f "><a> <img src="images/moveup.png" id="up" onclick="topFunction()"  style="background: #4f4f4f "> </a></div></center>
+	<center><div id="up"  style="background: #4f4f4f "><a><span class="btnmenu" onclick="topFunction()"><i class="fa fa-arrow-circle-up icons"></i></span>  </a></div></center>
 	
 </div> 
 <div id="footer" style="background: #4f4f4f ">
@@ -236,11 +248,11 @@
 	
 <table>
 			<tr>
-				<td><a><img src="images/phone.png" width="24px"></a></td>
+				<td><a><i class="fa fa-phone icon"></i></a></td>
 				<td>0791958878</td>
 			</tr>
 			<tr>
-				<td><a><img src="images/phone.png" width="24px"></a></td>
+				<td><a><i class="fa fa-phone icon"></i></a></td>
 				<td>0738161992</td>
 			</tr>
 </table>
@@ -253,29 +265,29 @@
 
 		<table>
 			<tr>
-				<td><a href="mailto:kirwadan03@gmail.com?subject=My reach out!" style="color: black"><img src="images/Gmail.png" width="24px"> </a></td>
+				<td><a href="mailto:kirwadan03@gmail.com?subject=My reach out!" style="color: black"><i class="fa fa-envelope icon"></i> </a></td>
 				<td><a href="#">Email</a></td>
 			</tr>
 			<tr>
-				<td><a href="#" style="color: black"><img src="images/twitter.png" width="24px"></a></td>
+				<td><a href="#" style="color: black"><i class="fa fa-twitter icon"></i></a></td>
 				<td><a href="#">Twitter</a></td>
 			</tr>
 			<tr>
-				<td><a href="#" style="color: black"><img src="images/skype.png" width="24px"></a></td>
+				<td><a href="#" style="color: black"><i class="fa fa-skype icon"></i></a></td>
 				<td><a href="#">Skype</a></td>
 			</tr>
 			<tr>
-				<td><a href="#" style="color: black"><img src="images/linkedin.png" width="24px"></a></td>
-				<td><a href="#">Linkedin</a></td>
+				<td><a href="#" style="color: black"><i class="fa fa-linkedin-square icon"></i></a></td>
+				<td><a href="#" target="_blank">Linkedin</a></td>
 			</tr>
 			<tr>
-				<td><a href="#" style="color: black"><img src="images/facebook.png" width="24px"></a></td>
+				<td><a href="#" style="color: black"><i class="fa fa-facebook icon"></i></a></td>
 				<td><a href="#">Facebook</a></td>
 			</tr>
 	
 	</table>
 	<p>
-		&copy; 2020-2020  &trade; &nbsp;&nbsp; <a href="https://my-ws-dan.herokuapp.com/Home.html">my-ws-dan.com</a>    
+		&copy; 2020-<span id="currentyear"></span>  &trade; &nbsp;&nbsp; <a href="https://my-ws-dan.herokuapp.com/index2.html">my-ws-dan</a>    
 	</p>
 	</center>
 	</center>
