--- a/index2.html
+++ b/index2.html
@@ -7,9 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body style="background: #3b3b3b ">
+<body style="background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)) #9e8e81 ">
 
-<div id="navbar" style="background: #4f4f4f ">
+<div id="navbar" style="background: #051818 ">
   <a href="#default" id="logo"><img src="images/profile.jpg" alt="avater" width="40px" style="border-radius: 40%"></a>
   <div id="navbar-right">
   <label style="color: white">Daniel Kipchirchir</label>
@@ -115,7 +115,9 @@
 							<td class="rateitem"> Java</td>
 							<td class="ratescore"> 
 								<div id="ratetrack">
-									<div id="javaratetrain"></div>
+									<div id="javaratetrain">
+										<center><label>90 %</label></center>
+									</div>
 								</div>
 							</td>
 						</tr>
@@ -233,11 +235,11 @@
 </div>
 
 </div>
-<div id="moveup" style="background: #4f4f4f ">
-	<center><div id="up"  style="background: #4f4f4f "><a><span class="btnmenu" onclick="topFunction()"><i class="fa fa-arrow-circle-up icons"></i></span>  </a></div></center>
+<div id="moveup" style="background:#051818 ">
+	<center><div id="up"  style="background: #051818"><a><span class="btnmenu" onclick="topFunction()"><i class="fa fa-arrow-circle-up icons"></i></span>  </a></div></center>
 	
 </div> 
-<div id="footer" style="background: #4f4f4f ">
+<div id="footer" style="background: #051818 ">
 		
 		<center>
 	<label style="font-size: 24px">Best Quote</label>
