modified file background image redused and links updated

--- a/index2.html
+++ b/index2.html
@@ -195,14 +195,14 @@
 			<div class="mydiscriptioncontent">
 				<div class="mycontent1">
 					<a href="#"><img src="images/screenshots/ecmmerceshort.jpg" width="100%"></a>
-					<a href="#">visit</a>&nbsp;&nbsp;
+					<!-- <a href="#">visit</a>&nbsp;&nbsp;-->
 					<label>
 						ecommerce website that facilitated online shopping specificaly for beauty
 					</label>
 				</div><br>
 				<div class="mycontent2">
-					<a href="#"><img src="images/screenshots/Covid-19trackerhome.jpg" width="100%"></a>
-					<a href="#">visit</a>&nbsp;&nbsp;
+					<a href="https://kenyacovid-19tracker.herokuapp.com/Home.html" target="_blank"><img src="images/screenshots/Covid-19trackerhome.jpg" width="100%"></a>
+					<a href="https://kenyacovid-19tracker.herokuapp.com/Home.html" target="_blank">visit</a>&nbsp;&nbsp;
 					<label>
 						Covid-19 update the site specificaly for country Kenya it gave update on both infection cumulation and also government directives and preventive measures
 					</label>
@@ -210,15 +210,15 @@
 			</div><br>
 			<div class="mydiscriptioncontent">
 				<div class="mycontent1">
-					<a href="#"><img src="images/screenshots/tracktraceshort.jpg" width="100%"></a>
-					<a href="#">visit</a>&nbsp;&nbsp;
+					<a href="https://excellent-tracking.herokuapp.com/Home.html" target="_blank"><img src="images/screenshots/tracktraceshort.jpg" width="100%"></a>
+					<a href="https://excellent-tracking.herokuapp.com/Home.html" target="_blank">visit</a>&nbsp;&nbsp;
 					<label>
 						 An online car  and cargo tracking website for specific company provider
 					</label>
 				</div><br>
 				<div class="mycontent2">
 					<a href="#"><img src="images/screenshots/trainticketshort.jpg" width="100%"></a>
-					<a href="#">visit</a>&nbsp;&nbsp;
+					<!--<a href="#">visit</a>&nbsp;&nbsp;-->
 					<label>
 						An online train ticket booking platform to aid in time management and sychronize terminai activities
 					</label>
@@ -272,7 +272,7 @@
 			</tr>
 			<tr>
 				<td><a href="#" style="color: black"><i class="fa fa-twitter icon"></i></a></td>
-				<td><a href="#">Twitter</a></td>
+				<td><a href="https://twitter.com/kirwadan03" target="_blank">Twitter</a></td>
 			</tr>
 			<tr>
 				<td><a href="#" style="color: black"><i class="fa fa-skype icon"></i></a></td>
@@ -289,7 +289,8 @@
 	
 	</table>
 	<p>
-		&copy; 2020-<span id="currentyear"></span>  &trade; &nbsp;&nbsp; <a href="https://my-ws-dan.herokuapp.com/index2.html">my-ws-dan</a>    
+		&copy; 2020-<span class="currentyear"></span>   &nbsp;&nbsp; <br>
+		<a href="https://my-ws-dan.herokuapp.com/index2.html">my-ws-dan</a>    
 	</p>
 	</center>
 	</center>
@@ -297,19 +298,5 @@
 
 	<!-- body end start of scripts -->
 <script type="text/javascript" src="scripts/index2.js"></script>
-<script type="text/javascript">
-
-
-var toggler = document.getElementsByClassName("caret");
-var i;
-
-for (i = 0; i < toggler.length; i++) {
-  toggler[i].addEventListener("click", function() {
-    this.parentElement.querySelector(".nested").classList.toggle("active");
-    this.classList.toggle("caret-down");
-  });
-}
-
-	</script>
 </body>
 </html>
