modified file footer color changed

--- a/index2.html
+++ b/index2.html
@@ -239,7 +239,7 @@
 	<center><div id="up"  style="background: #051818"><a><span class="btnmenu" onclick="topFunction()"><i class="fa fa-arrow-circle-up icons"></i></span>  </a></div></center>
 	
 </div> 
-<div id="footer" style="background: #051818 ">
+<div id="footer" style="background: #051818; color: #f1f1f1 ">
 		
 		<center>
 	<label style="font-size: 24px">Best Quote</label>
