add new content on discription

--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
 	</center>
 	<center>
 		<p>
-			I got intrest on IoT, Since the platform creates opportunities for people to connect these devices and control them with big data technology, which in return will promote efficiency in performance 
+			got interest on IoT, Since the platform creates opportunities for people to connect these devices and control them with big data technology, which in return will promote efficiency in performance
 		</p>
 	</center>
 	<a href="index2.html#largecards"><div class="scrolldown">
@@ -39,10 +39,10 @@
 	 </center>
 
 	 <center>
-	 	<label><span><i class="fa fa-user iconz"></i></span>  Daniel Kipchirchir</label><br><hr>
-	 	<label><span><i class="fa fa-map-marker iconz"></i></span>  Eldoret (Kenya)</label><br><hr>
-	 	<label><span><i class="fa fa-book iconz"></i></span>  Studing (Kibabii University)</label><br><hr>
-	 	<label><span><i class="fa fa-language iconz"></i></span>  Language (English)</label><br><hr> 
+	 	<label><span><i class="fa fa-user iconz"></i></span>&nbsp;&nbsp;  Daniel Kipchirchir</label><br><hr>
+	 	<label><span><i class="fa fa-map-marker iconz"></i></span>&nbsp;&nbsp;  Eldoret (Kenya)</label><br><hr>
+	 	<label><span><i class="fa fa-book iconz"></i></span>&nbsp;&nbsp;  Studing (Kibabii University)</label><br><hr>
+	 	<label><span><i class="fa fa-language iconz"></i></span>&nbsp;&nbsp;  Language (English)</label><br><hr> 
 	 </center><br>
 	  <center>
 	 	<label><b>My Skills</b></label><br><br>
@@ -51,9 +51,11 @@
 	 	 <span><img src="https://img.shields.io/badge/-Css-000000?style=flat&logo=css3&logoColor=FCC624"></span><br>
 	 	 <span><img src="https://img.shields.io/badge/-Vue.js-000000?style=flat&logo=vue.js&logoColor=FCC624"></span><br>
 	 	 <span><img src="https://img.shields.io/badge/-Laravel-000000?style=flat&logo=laravel&logoColor=FCC624"></span><br>
-	 	  <span><img src="https://img.shields.io/badge/-Java-000000?style=flat&logo=java&logoColor=F05032"></span><br>
-	 	 <span><img src="https://img.shields.io/badge/-Git-000000?style=flat&logo=git&logoColor=F05032"></span><br>
-	 	  <span><img src="https://img.shields.io/badge/-GitHub-000000?style=flat&logo=github&logoColor=F05032"></span>
+	 	  <span><img src="https://img.shields.io/badge/-Java-000000?style=flat&logo=java&logoColor=FCC624"></span><br>
+	 	 <span><img src="https://img.shields.io/badge/-Git-000000?style=flat&logo=git&logoColor=FCC624"></span><br>
+	 	 <span><img src="https://img.shields.io/badge/-MSQL-000000?style=flat&logo=mysql&logoColor=FCC624"></span><br>
+	 	 <span><img src="https://img.shields.io/badge/-Firebase-000000?style=flat&logo=firebase&logoColor=FCC624"></span><br>
+	 	  <span><img src="https://img.shields.io/badge/-GitHub-000000?style=flat&logo=github&logoColor=FCC624"></span>
 	 </center>
 	 <br>
 	 <hr>
@@ -189,7 +191,7 @@
 		<div class="Portfolio" id="Portfolio">
 			<div class="mydiscription">
 				<p>
-					Hi am a software developer and web developer. I do modern UI design 
+					Hello, my journey and love of tech has drastically increased. The driving power behind is the dynamically fast changing world. Almost everything if not all nowadays relay on Technology "how passionate am I to be part of "
 				</p>
 			</div>
 			<div class="mydiscriptioncontent">
@@ -204,7 +206,7 @@
 					<a href="https://kenyacovid-19tracker.herokuapp.com/Home.html" target="_blank"><img src="images/screenshots/Covid-19trackerhome.jpg" width="100%"></a>
 					<a href="https://kenyacovid-19tracker.herokuapp.com/Home.html" target="_blank">visit</a>&nbsp;&nbsp;
 					<label>
-						Covid-19 update the site specificaly for country Kenya it gave update on both infection cumulation and also government directives and preventive measures
+						Covid-19 update the site specifically for country Kenya it gave update on both infection accumulation and also government directives and preventive measures
 					</label>
 				</div>
 			</div><br>
@@ -220,7 +222,7 @@
 					<a href="#"><img src="images/screenshots/trainticketshort.jpg" width="100%"></a>
 					<!--<a href="#">visit</a>&nbsp;&nbsp;-->
 					<label>
-						An online train ticket booking platform to aid in time management and sychronize terminai activities
+						An online train ticket booking platform to aid in time management and synchronize terminal activities
 					</label>
 				</div>
 			</div>
