fixed sroll isssue

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			got interest on IoT, Since the platform creates opportunities for people to connect these devices and control them with big data technology, which in return will promote efficiency in performance
 		</p>
 	</center>
-	<a href="index2.html#largecards"><div class="scrolldown">
+	<a href="index.html#largecards"><div class="scrolldown">
 		<span></span>
 		<span></span>
 		<span></span>
@@ -72,8 +72,8 @@
 			<span class="btnmenu"><i class="fa fa-bars icons"></i></span>
 			<div class="submenu-menu">
 		
-				<a href="index2.html#smallcards" class="slidemenup">Portfolio</a>
-				<a href="index2.html#smallcards" class="slidemenur">Resume</a>	
+				<a href="index.html#smallcards" class="slidemenup">Portfolio</a>
+				<a href="index.html#smallcards" class="slidemenur">Resume</a>	
 			</div>
 			
 		</div>
