--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My_ws-dan</title>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<meta name="description" content="This is Portfolio and Resume website">
+	<meta name="keyword" content="Portfolio, Resume">
+
+
+	<title>Daniel kipchirchir</title>
 	<link rel="stylesheet" type="text/css" href="styles/index2.css">
 	<link rel="stylesheet" type="text/css" href="styles/banner.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 <body style="background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)) #9e8e81 ">
 
