modified file added webpage discription

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
-	<meta name="description" content="This is Portfolio and Resume website">
+	<meta name="description" content="This is Portfolio and Resume website" />
 	<meta name="keyword" content="Portfolio, Resume">
 
 
