modified file added about  me div

--- a/index.html
+++ b/index.html
@@ -238,11 +238,24 @@
 		
 		
 	</div><br>
-	
-
-
-
 </div>
+<br>
+	<div class="holder">
+	<div class="card">
+		<div class="card-text">
+
+		<center>About Me</center>
+		<br>
+		<p>
+			Hellow am a persionate software development, I begun it in the year 2017. Am happy to be in the field that is constantly changing plateform. 
+		</p>
+			
+			
+		</div>
+		<svg> some logo here </svg>
+	</div>
+</div>
+<br><br>
 
 </div>
 <div id="moveup" style="background:#051818 ">
@@ -300,7 +313,7 @@
 	</table>
 	<p>
 		&copy; 2020-<span class="currentyear"></span>   &nbsp;&nbsp; <br>
-		<a href="https://my-ws-dan.herokuapp.com/index2.html">my-ws-dan</a>    
+		<a href="https://my-ws-dan.herokuapp.com">my-ws-dan</a>    
 	</p>
 	</center>
 	</center>
