added profile data

--- a/index.html
+++ b/index.html
@@ -247,7 +247,10 @@
 		<center>About Me</center>
 		<br>
 		<p>
-			Hellow am a persionate software development, I begun it in the year 2017. Am happy to be in the field that is constantly changing plateform. 
+			Hellow am a Dynamic and detail-oriented Web Developer with a knack for conceptualizing and delivering elegant, user-friendly solutions effectively and efficiently. Possesses a track record of developing an e-commerce web app. Armed with an extensive understanding of end-to-end SDLC and cloud computing. Regular participant and organizer of local web developer meetups..<br>
+			Also a Motivated designer and developer with experience creating custom websites through PHP and CSS. Strong collaboration skills and proven history of application development.JavaScript, MySQL and Firebase.<br>
+			
+
 		</p>
 			
 			
