glass effect added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   </div>
 </div>
 <div id="content1" style="background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/techbackground3.jpg);background-size: cover;">
-	<center>
+	<div class="glassbox">
+		<center>
 		<br>
 		<h3>Hi am <span class="myprofession"></span></h3>
 	</center>
@@ -33,6 +34,8 @@
 			got interest on IoT, Since the platform creates opportunities for people to connect these devices and control them with big data technology, which in return will promote efficiency in performance
 		</p>
 	</center>
+	</div>
+	
 	<a href="index.html#largecards"><div class="scrolldown">
 		<span></span>
 		<span></span>
@@ -112,6 +115,13 @@
 				</p>	
 				</section>
 				<hr>
+				<section>
+				<label><strong>University of California, Davis</strong> <span>(sep 2020 - nov 2020)</span></label><br>
+				<label><strong>Introduction to Web Development</strong></label>
+				<p>
+				To certisfy my perssion on website development and build my foundation as a web developer  	
+				</p>	
+				</section>
 			</div>
 			<div class="myresumerating">
 				<center><label><strong>My Skills Rating</strong></label></center>
